@@ -126,6 +126,7 @@ class AnsibleHost(object):
 
         self.ansible_host = parameters.get('ansible_host')
         self.ansible_user = parameters.get('ansible_user')
+        self.ansible_ssh_pass = parameters.get('ansible_ssh_pass')
         self.ansible_ssh_private_key_file = parameters.get(
             'ansible_ssh_private_key_file')
 
@@ -138,6 +139,8 @@ class AnsibleHost(object):
             self.config['ansible_host'] = self.ansible_host
         if self.ansible_user:
             self.config['ansible_user'] = self.ansible_user
+        if self.ansible_ssh_pass:
+            self.config['ansible_ssh_pass'] = self.ansible_ssh_pass
         if self.ansible_ssh_private_key_file:
             self.config['ansible_ssh_private_key_file'] = \
                 self.ansible_ssh_private_key_file
