@@ -1,0 +1,54 @@
+tosca_definitions_version: cloudify_dsl_1_3
+
+imports:
+  - http://www.getcloudify.org/spec/cloudify/4.5/types.yaml
+  - plugin.yaml
+
+inputs:
+
+  site_yaml_relative_path:
+    type: string
+    default: examples/local/play.yaml
+
+  ssh_server_host:
+    type: string
+    default: localhost
+
+  ssh_server_password:
+    type: string
+    default: clouduser
+
+  ssh_server_username:
+    type: string
+    default: clouduser
+
+node_types:
+
+  runplay:
+    derived_from: cloudify.nodes.Compute
+    properties:
+      ansible_become:
+        default: false
+      agent_config:
+        default:
+          install_method: none
+          user: { get_input: ssh_server_username }
+          password: { get_input: ssh_server_password }
+    interfaces:
+      cloudify.interfaces.lifecycle:
+        start:
+          implementation: ansible.cloudify_ansible.tasks.run
+          inputs:
+            playbook_path:
+              default: { get_input: site_yaml_relative_path }
+            debug_level:
+              default: 4
+            save_playbook:
+              default: true
+
+node_templates:
+
+  runplay:
+    type: runplay
+    properties:
+      ip: { get_input: ssh_server_host }
